# megarepo

./: .gitignore  ISSUES.md  PHILOSOPHY.md  PLAN.md  README.md  fix-permissions.sh  index.html  test_build.sh
active/dev-tools/bingo-probability/: .coverage  README.md  coverage.xml  index.html  pyproject.toml
active/dev-tools/bingo-probability/src/bingo_probability.egg-info/: PKG-INFO  (+4 more)
active/dev-tools/bingo-probability/tests/: test_solvers.py
active/dev-tools/cli-to-web/: LICENSE  README.md  index.html  pyproject.toml
active/dev-tools/cli-to-web/test/: convert_png_to_jpg.yaml
active/dev-tools/copilot-lint-fixer/: README.md  index.html  pyproject.toml
active/dev-tools/copilot-lint-fixer/fixtures/: linty_math.py  linty_style.py
active/dev-tools/copilot-lint-fixer/tests/: test_response_parsing.py
active/dev-tools/full-auto-ci/: .gitignore  .pylintrc  README.md  __init__.py  config.example.yml  design.md  fix-docker-connection.sh  index.html  main.py  pyproject.toml  sitecustomize.py
active/dev-tools/full-auto-ci/.devcontainer/: Dockerfile  config.yml  devcontainer.json  docker-compose.yml  init_dev_env.sh
active/dev-tools/full-auto-ci/.github/: copilot-instructions.md
active/dev-tools/full-auto-ci/examples/: mcp_client.py
active/dev-tools/full-auto-ci/src/: __init__.py  api.py  cli.py  cli_mcp.py  cli_providers.py  cli_service.py  config.py  db.py  git.py  ratchet.py  service.py  tools.py  webhook.py
active/dev-tools/full-auto-ci/tests/: test_api.py  test_cli.py  test_dashboard.py  test_git.py  test_integration_service_flow.py  test_mcp.py  test_ratchet.py  test_service.py  test_tools.py  test_webhook.py
active/dev-tools/full-auto-ci/ui_tests/: conftest.py  test_dashboard_smoke.py
active/dev-tools/hivemind-llm/coordinator/: Dockerfile  app.py  cluster.py  models.py  pyproject.toml
active/games/MancalaAI/: .coverage  History.txt  ISSUES.txt  README.md  __main__.py  agent.py  coverage.xml  index.html  model.py  pyproject.toml  test_board.py  test_everything.py
active/games/MancalaAI/gym_mancala/: __init__.py
active/games/MancalaAI/shared/: priority.py
active/games/conway_game_of_war/: .coverage  ISSUES.txt  README.md  TODO.txt  coverage.xml  index.html  pyproject.toml
active/games/conway_game_of_war/.github/: copilot-instructions.md
active/games/lets-holdem-together/: .coverage  PLAN.md  README.md  coverage.xml  index.html  pyproject.toml
active/games/lets-holdem-together/feedback/: .gitkeep  20260106_123506_Calvin_feature.md  20260106_123559_Calvin_improvement.md  20260106_124549_Calvin_bug.md  20260106_124603_Calvin_bug.md  20260106_124618_Calvin_bug.md  20260106_124953_Calvin_bug.md  20260106_125314_Calvin_bug.md  20260106_125617_Calvin_bug.md  20260106_130029_Calvin_bug.md  20260106_130119_Calvin_improvement.md  20260106_130321_Calvin_bug.md  20260106_130415_Calvin_bug.md  20260106_130928_Calvin_bug.md  20260106_131406_brent_bug.md  20260106_131954_Calvin_bug.md  20260106_132420_brain_improvement.md  20260106_140028_Calvin_improvement.md  20260106_140650_Calvin_bug.md
active/games/lets-holdem-together/holdem_together/: app.py  background_runner.py  bot_sandbox.py  db.py  engine.py  game_state.py  poker_eval.py  ratings.py  routes.py  sandbox_runner.py  services.py  tournament.py  worker.py
active/games/lets-holdem-together/holdem_together.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
active/games/lets-holdem-together/tests/: test_app_smoke.py  test_background_runner_smoke.py  test_bot_sandbox.py  test_bot_sandbox_comprehensive.py  test_bot_sandbox_imports.py  test_bot_sandbox_logs.py  test_engine_comprehensive.py  test_engine_smoke.py  test_game_state.py  test_match_routes_smoke.py  test_poker_edge_cases.py  test_poker_eval.py  test_poker_eval_comprehensive.py  test_ratings_comprehensive.py  test_ratings_smoke.py  test_routes_comprehensive.py  test_services_comprehensive.py  test_tournament_comprehensive.py
active/games/wizard_fight/: .gitignore  DEVELOPMENT_PLAN.md  README.md  index.html  pyproject.toml
active/games/wizard_fight/docs/: deploy_vps.md  dsl_v1.json  dsl_v1.md  paper_prototype_v1.md  timing_v1.json
active/games/wizard_fight/frontend/: .env.development  app.js  game.html  game.js  index.html  leaderboard.html  leaderboard.js  logger.js  package-lock.json  package.json  playfield.js  spectate.html  spectate.js  spellbook.html  spellbook.js  styles.css  vite.config.ts
active/games/wizard_fight/scripts/: dev.sh  run_cpu_matches.py  start_all.sh
active/games/wizard_fight/tests/: conftest.py  test_copilot_backend.py  test_copilot_generate.py  test_copilot_integration.py  test_dsl_validation.py  test_engine.py  test_llm_label.py  test_research.py  test_server.py  test_storage.py  test_timing_config.py
active/games/wizard_fight/ui_tests/: demo_record.py
active/web-apps/parambulator/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  FEEDBACK_ACTION_PLAN.md  README.md  SECURITY_HARDENING_PLAN.md  SECURITY_QUICK_FIX.md  SECURITY_REVIEW.md  SECURITY_SUMMARY.md  docker-compose.yml  index.html  pyproject.toml  run_feedback_tests.sh  test_undo_simple.py  tunnel.sh
active/web-apps/parambulator/k8s/: cloudflared.yaml  parambulator.yaml
active/web-apps/parambulator/static/: app.css
active/web-apps/parambulator/templates/: error.html  index.html
active/web-apps/parambulator/tests/: TEST_SUITE.md  conftest.py  test_feedback.py  test_feedback_improvements.py  test_scoring.py  test_ui_playwright.py
archive/experiments/homemaker/: Dockerfile  aliases.txt  get_and_run.sh  index.html  install.sh  pyproject.toml  test.sh
archive/experiments/homemaker/.devcontainer/: devcontainer.json
archive/homework/Compiler/: .gitignore  CMakeLists.txt  README.md  includes.hpp  keywords.txt  main.cpp  parser.y  scanner.l
archive/homework/Compiler/ast/: Block.hpp  Node.hpp  Program.hpp  StatementSequence.cpp  StatementSequence.hpp
archive/homework/Compiler/globals/: Register.cpp  Register.hpp  RegisterPool.cpp  RegisterPool.hpp  globals.hpp
archive/homework/Compiler/util/: keyword.py  test-all.sh  token.py
(+725 files in other folders)
