[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bingo-probability"
version = "0.1.0"
description = "Calculate bingo win probability using Monte Carlo and inclusion-exclusion"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
bingo-probability = "bingo_probability.cli:main"
