[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-together"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.0.3",
  "Flask-SQLAlchemy==3.1.1",
  "SQLAlchemy==2.0.36",
  "Werkzeug==3.0.6",
  "pytest==8.3.4",
]

[tool.setuptools.packages.find]
include = ["holdem_together*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
holdem-together = "holdem_together.app:main" 