[project]
name = "wizard-fight"
version = "0.1.0"
description = "Wizard Fight game server and tooling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
