[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parambulator"
version = "0.1.0"
description = "Seating chart planner with constraint-based scoring"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3",
    "pytest>=7.4",
    "playwright>=1.49",
    "pytest-playwright>=0.5.2",
]

[project.scripts]
parambulator = "parambulator.app:main"

[tool.setuptools.packages.find]
where = ["src"]
